# equaTrix

./: CMakeLists.txt  README.md  build.sh  makefile
data/: Calc.g4  Calc.interp  Calc.tokens  CalcLexer.interp
doc/: doxyfile
src/antlr4/: CalcBaseListener.cpp  CalcBaseListener.h  CalcBaseVisitor.cpp  CalcBaseVisitor.h  CalcEvalVisitor.h  CalcLexer.cpp  CalcLexer.h  CalcListener.cpp  CalcListener.h  CalcParser.cpp  CalcParser.h  CalcVisitor.cpp  CalcVisitor.h  ExprTree.cpp  ExprTree.h
src/backend/: Function.cpp  Function.h  Integral.cpp  Integral.h  Matrix.cpp  Matrix.h  System.cpp  System.h  main.cpp
src/qt/: equaTrix.pro  mainQt.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  styles.qss  styles_dark.qss  ui_mainwindow.h
